Updated the generate script to meet current implementation standard
Changed the setPath function to instead be three functions: one to set the security level to sqrl or qrl, one to set the domain that the client key pair will be generated on (automatically calculates the d= value) and the third to set the rest of the path to the authentication script.

--- a/trianglman/sqrl/config.sample.json
+++ b/trianglman/sqrl/config.sample.json
@@ -1,5 +1,7 @@
 {
-    "path":"sqrl://example.com/sqrl",
+    "secure":1,
+    "key_domain":"domain.com",
+    "authentication_path":"/login/sqrlauth.php",
             
     "dsn":"mysql:host=localhost;dbname=sqrl",
     "username":"foo",
@@ -9,5 +11,5 @@
     
     "height":"300",
     "padding":"10",
-    "nonce_salt":"B;{,!4z)<U5^@JZw1t'#[)%R!NI@Dj*\'fm62C@nbB^=:P,hWPu(e;)pbP:B1;Z"
+    "nonce_salt":"replace this with some unique random data"
 }
