Added stale nonce handling
A nonce can now be checked for age. A new configuration setting was added to the sample JSON file allowing a user to set the number of minutes before a nonce is marked as stale. Added a check and test to the SqrlValidate class to check this age against the created value stored in the database.

--- a/trianglman/sqrl/config.sample.json
+++ b/trianglman/sqrl/config.sample.json
@@ -9,6 +9,8 @@
     "nonce_table":"sqrl_nonce",
     "pubkey_table":"sqrl_pubkey",
     
+    "nonce_max_age":"5",
+    
     "height":"300",
     "padding":"10",
     "nonce_salt":"replace this with some unique random data"
