--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,14 @@
             "email": "johnj.a.judy@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-0": {
+            "Trianglman\\Sqrl": "src/"
+        }
+    },
     "require": {
-        "endroid/qrcode": "1.1.3",
+        "php": ">=5.3.3",
+        "endroid/qrcode": "~1.1",
         "ext-openssl":"*"
     }
 }
