--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "endroid/qrcode": "~1.1",
+        "endroid/qrcode": "1.1.3",
         "ext-openssl":"*"
     }
 }
