Updated composer and travis config to move phpunit/DbUnit into composer require-dev for loading

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ php:
 
 before_script:
   - sudo apt-get install openssl
-  - pyrus install pear.phpunit.de/DbUnit
-  - composer install --dev
+  - composer install
