--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "require": {
         "php": ">=5.3.3",
         "endroid/qrcode": "1.1.3",
-        "ext-openssl":"*"
+        "ext-openssl": "*"
+    },
+    "require-dev": {
+        "phpunit/dbunit": "1.3.*@dev"
     }
 }
