--- a/sqrl/config.sample.json
+++ b/sqrl/config.sample.json
@@ -1,7 +1,10 @@
 {
+    "accepted_versions": [1],
     "secure":1,
     "key_domain":"domain.com",
     "authentication_path":"/login/sqrlauth.php",
+    "friendly_name":"Example Server",
+    "allow_anonymous_accounts":0,
             
     "dsn":"mysql:host=localhost;dbname=sqrl",
     "username":"foo",
