Modified the SqrlConfigurable abstract
Changed the abstract to be its own independent class that parses and stores configuration information in itself. Updated the storage, generator and validator classes to handle this new class as a dependency. Created unit tests for the new configuration object and updated the SqrlClientInteractionsIntegrationTest to use it as well.

--- a/sqrl/config.sample.json
+++ b/sqrl/config.sample.json
@@ -2,7 +2,7 @@
     "accepted_versions": [1],
     "secure":1,
     "key_domain":"domain.com",
-    "authentication_path":"/login/sqrlauth.php",
+    "authentication_path":"login/sqrlauth.php",
     "friendly_name":"Example Server",
     "allow_anonymous_accounts":0,
             
