--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,10 @@
         }
     },
     "require": {
-        "php": ">=5.3.3",
-        "endroid/qrcode": "1.1.3",
-        "ext-openssl": "*"
+        "php": ">=7.2.0",
+        "endroid/qrcode": "~1.1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "~7.2.4"
     }
 }
